[package]
edition = "2021"
name = "rust-sqlite3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.12", features = ["cargo"]}
env_logger = "0.9.0"
log = "0.4.16"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
sqlparser = "0.16.0"
thiserror = "1.0.30"